--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <pre class="codeOP"><pre id="numberRow"></pre><code id="output" tabindex="4"></code></pre>
   </div>
   <script src="./highlighter.js" defer></script>
-  <script src="./main.js" defer></script>
+  <script src="./test.js" defer></script>
 </body>
 </html>
