progress to extensibility

--- a/test/index.html
+++ b/test/index.html
@@ -8,9 +8,7 @@
   <link rel="stylesheet" href="../src/style.css">
 </head>
 <body>
-  <div class="container">
-    <pre class="codeOP"><pre id="numberRow"></pre><code id="output" tabindex="4"></code></pre>
-  </div>
+  <div class="container"></div>
   <script src="../src/highlighter.js" defer></script>
   <script src="./test.js" defer></script>
 </body>
