--- a/test/index.html
+++ b/test/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Editor</title>
-    <link rel="stylesheet" href="../src/style.css" />
+    <link rel="stylesheet" href="../out/JavaScript/style.css" />
     <link rel="stylesheet" href="./myStyle.css" />
-    <script src="../src/JS-syntex-min.js" defer></script>
+    <script src="../out/JavaScript/JS-syntex.min.js" defer></script>
     <!-- <script src="../src/complete.js" defer></script> -->
   </head>
   <body>
