--- a/test/index.html
+++ b/test/index.html
@@ -17,7 +17,23 @@
     <div class="container">
       <div class="block">
         <p>Adding two numners</p>
-        <div class="ex1 js-syntex" fontsize="23" lineheight="26">function a (abc, f) {}</div>
+        <div class="ex1 js-syntex" fontsize="23" lineheight="26">var a = arguments
+function a () {
+  if (arguments) {
+    doStuff();  
+  } else {
+    doElse();
+  }
+}
+var get = 0
+class d {
+  constructor() {
+    k()
+  }
+  get sef () {
+
+  }
+}</div>
       </div>
       <div class="block">
         <p>Regex test</p>
@@ -30,11 +46,9 @@ var nameChar = /[a-zA-Z0-9_\$]/;
 var number = /^((\d*)|(0x[0-9a-f]*)|(0b[01]*))$/;
 var nullTypes = /^(null|NaN|undefined)$/;
 // Test
-"234".match(nameChar)
-        </div>
-        
+"234".match(nameChar)</div>
       </div>
-      <div class="block">
+      <!-- <div class="block">
         <p>Overall test</p>
         <div class="ex3 js-syntex">function a(_dereq_, module, exports) {
   (function (Buffer) {
@@ -5037,8 +5051,8 @@ var nullTypes = /^(null|NaN|undefined)$/;
             contours.push(currentContour);
             currentContour = [];
           }
-        }</div>
-      </div>
+        }</div> -->
+      <!-- </div> -->
     </div>
   </body>
 </html>
