bug fix: escape chars in string

--- a/test/index.html
+++ b/test/index.html
@@ -18,7 +18,7 @@
       <div class="block">
         <p>Adding two numners</p>
   <div class="ex1 js-colorful" lineNumbering>else if (text[i - 1] == "\\") {
-    if (text[i - 2] != "//") {
+    if (text[i - 2] != "\\") {
 var k = !/[\wͰ-Ͽ$]/
 toke /244/3</div>
       </div>
