bug fix: regex, removed dead codes

--- a/test/index.html
+++ b/test/index.html
@@ -21,7 +21,11 @@
       </div>
       <div class="block">
         <p>Regex test</p>
-        <div class="ex2 js-colorful" lineNumbering></div>
+        <div class="ex2 js-colorful" lineNumbering>|| 1 / x === 1 / y : x != x && 
+var arrofRE = [/abc/, /defa,ult/, /abcdef\/,\/hij/,/[a-z]/]
+complex_case = 344 + gh /*^_^*/ /notregex/
+even_complex_case = gh /*^_^*/ /notregex/ 65 /*d*/ /**//5/
+</div>
       </div>
       <div class="block">
         <p>Overall test</p>
