bug fixes, code refactoring & performance improves

--- a/test/index.html
+++ b/test/index.html
@@ -20,18 +20,19 @@
         <p>Numbers</p>
   <div class="ex1 JS-colorful colorful">re = /^(\d*(\.\d*)?|0x[0-9a-f]*|0b[01]*|\d+(\.\d*)?(e|E)\d+)$/
 244
-234565.435654
-233.
-.3435
-0.453
-0x3453f
-0x4353g
-4x45454
-0b1101001
-2E4
-24.454654646e454.1
-24.454654E33
-3e6</div>
+class des {
+  construct(lfksdfdn = function (arr) {return [function(ar)]}, cond) {}
+
+}
+function a(ssfsd){}
+function (sdf){}
+function a (){}
+function fd (){}
+avsf()
+asd ()
+- πρ(sdfds)
+functions(dsf)
+/*d*/</div>
       </div>
       <div class="block">
         <p>complex cases</p>
