added missing codes

--- a/test/index.html
+++ b/test/index.html
@@ -24,12 +24,19 @@ class des {
   construct(lfksdfdn = function (arr) {return [function(ar)]}, cond) {}
 
 }
+`${ /* } */ a + b }`
+`${ '}' }`
+`${foo({ a: { b: { c: true } } })}`
 function a(ssfsd){}
 function (sdf){}
 function a (){}
 function fd (){}
 avsf()
-asd ()
+asd ();
+df 
+=> {}
+(sd=function(){}) => {3}
+()
 - πρ(sdfds)
 functions(dsf)
 /*d*/</div>
